# notes.txt

./: README.md
articles/: README.md
books/Anthony_Williams_-_C++_Concurrency_in_Action/: CMakeLists.txt  README.md  work_stealing_thread_pool.cpp
books/The_Rust_Programming_Language/: README.md
books/Vandevoorde_Josuttis_Gregor_-_C++_Templates_-The_Complete_Guide/: README.md
libraries/angular/: README.md
libraries/boost/asio/: CMakeLists.txt  asynchronous_tcp_server.cpp  synchronous_udp_server.cpp
libraries/boost/asio/read_file/: .gitignore  CMakeLists.txt  conanfile.py
libraries/boost/asio/read_file/src/: main.cpp
libraries/boost/asio/tutorial/: README.md  asynchronous_timer.cpp  asynchronous_udp_server.cpp  binding_arguments.cpp  completition_handler.cpp  synchronizing_handlers.cpp  synchronous_tcp_client.cpp  synchronous_timer.cpp  synchronous_udp_client.cpp
libraries/lexy/: CMakeLists.txt  main.cpp
os/: linux.md  win11.md
talks/Sean_Parent_-_Interitance_Is_The_Base_Class_Of_Evil/: main.cpp
tools/: virtualbox.md
tools/cmake/cmake-dependency-provider/: README.md  dep_provider.cmake
tools/cmake/cmake-dependency-provider/example/: CMakeLists.txt  main.cpp  wire.fbs
tools/git/: README.md
tools/llvm/clang-tidy-replacements/: .gitignore  CMakeLists.txt  README.md  ToStringModule.cpp
tools/llvm/clang-tidy-replacements/test/: CMakeLists.txt  my_sv.hpp  test.cpp  test_aliased.cpp
tools/vim/: README.md
